# ChangeLog for dev-python/cloud_sptheme
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Jun 2011; James Rowe <jnrowe@gmail.com> cloud_sptheme-1.1.ebuild:
  Whitespace fix.

  24 Jun 2011; James Rowe <jnrowe@gmail.com> cloud_sptheme-1.1.ebuild:
  Keyworded ~x86.

*cloud_sptheme-1.1 (22 Jun 2011)

  22 Jun 2011; James Rowe <jnrowe@gmail.com> +cloud_sptheme-1.1.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me [400].
