@@ -2,14 +2,16 @@
 Hash: SHA512
 
 DIST cloud_sptheme-1.1.tar.gz 19539 RMD160 523be7dce4ded1dc3a4904cb2b4b2ed68393b0bd SHA1 fadd6c3ec8061dcce5deffa6e55b426860661f68 SHA256 c4489666a1ac3075c322054e01300b6e56e20db0a9c40946875b44f39b9c17db
+DIST cloud_sptheme-1.2.tar.gz 25283 RMD160 be52a564ed602f917bd4c4a59960685e069d8fb9 SHA1 69da163fefa1f20ccc6e9076b3d4a6bcbb77948b SHA256 bca01fe484efa9bb919560512dd93e6e44f9c41a457abfeceb7e7c400c276a6e
 EBUILD cloud_sptheme-1.1.ebuild 673 RMD160 6e4730b1ed2cc796a4db726baa7b8e40a16d477a SHA1 a9044a2c322e7d93e06dd8bd0b132ab9b4be5660 SHA256 f8efa488181e4251e5150ca996551e1dbcc055f041cbeff1ac96d18a85d3c1f7
-MISC ChangeLog 468 RMD160 769c7138c827703916887be531f30ee9618bb594 SHA1 28aaa0f862d27943647821973d6b63ccd395079f SHA256 450bd3e636c389d9e6b3393905b9c81218c4560008851019bd08fd9abe0c2718
+EBUILD cloud_sptheme-1.2.ebuild 673 RMD160 6e4730b1ed2cc796a4db726baa7b8e40a16d477a SHA1 a9044a2c322e7d93e06dd8bd0b132ab9b4be5660 SHA256 f8efa488181e4251e5150ca996551e1dbcc055f041cbeff1ac96d18a85d3c1f7
+MISC ChangeLog 597 RMD160 530085d56c5b987584f03377f9eecd999419016a SHA1 824b73464067c4348e1650d4e4ebc498b5e4ee06 SHA256 e4121ec5649d4831becdc8048f95889c64d5695b2991464909d156e86d1f7951
 MISC metadata.xml 772 RMD160 1c4236c7b315fc6083ba4205dbebd37ce6a779f4 SHA1 de5d303880da99574e1e57c7f2e2c51170ffff32 SHA256 f2f50f02fef4808815221f1c05741d75ecd50457997d38565fc1d6f3420bde73
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk4GCa8ACgkQzJrj3cAXR0kOYACfcojwzlEyMPHDUKLWz9rnk5bi
-G2gAn2Qhg9jcbCYBu+Urm1LtL2YBjofE
-=t8jF
+iEYEAREKAAYFAk4cOtMACgkQzJrj3cAXR0kBtwCgus2n+IBjFhVo3YuFCKAzFqcG
+/dkAnAzny1AkJcG7vBtOCpl8TCY5rW67
+=hivw
 -----END PGP SIGNATURE-----
