@@ -1,0 +1,22 @@
+doc? ( dev-python/sphinx ) >=app-admin/eselect-python-20091230 =dev-lang/python-2*
+dev-python/sphinx >=app-admin/eselect-python-20091230 =dev-lang/python-2*
+0
+mirror://pypi/c/cloud_sptheme/cloud_sptheme-1.2.tar.gz
+
+http://pypi.python.org/pypi/cloud_sptheme/
+BSD
+A nice sphinx theme named 'Cloud', and some related extensions
+~amd64 ~x86
+distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
+doc
+
+
+
+3
+
+compile install postinst postrm prepare
+
+
+
+
+
